src/objects/TR1__Contact_Accrual__c.object
<CustomObject>
    <description>Used to store a candidate Holidays details</description>
    <fields>
        <fullName>TR1__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Accruals</relationshipLabel>
        <relationshipName>Contact_Accruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Hours_Accrued__c</fullName>
        <label>Hours Accrued</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Contact Accruals</relationshipLabel>
        <relationshipName>Contact_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Accrual</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Contact Accural Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>